Started implementing Swagger
